sroll good, timetable jquery good

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="timetable_menu">
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Right Now!</a></li>
+                            <li role="presentation" class="divider"></li>
                             <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-3" href="#">Friday</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-4" href="#">Saturday</a></li>
@@ -105,41 +106,28 @@
             -->
 
             <div id="main" class="container-fluid main shadow">
-                <div id="first" class="row">
-                    <div class="start">
-                    </div>
-
-
+                <div id="first" class="start row" style="margin: 0px">
                 </div>
-
-
-
-
-
-
-                    <!-- timeTable element -->
-                        <div class="row" style="display: none" id="tt_element">
-                         <!--   <div class="tt_e_left col-xs-3">
+                        <!-- timeTable element -->
+                        <div class="row" style="display: none; margin: 0px"  id="tt_element">
+                            <div class="tt_e_left col-xs-3">
 
                             </div>
                             <div class="tt_e_right col-xs-9">
-                                <div class="tt_e_desc col-xs-12">This is a placholdertext for an important DJ. He is touring through
-                                    europe and has lots of important infos which i will post here. Next thing i know is his name should
-                                    <!--be in the description.
-                                    <p>What is when this text keeps getting bigger and bigger</p>
-                                    <p>another paragraph</p>
+                                <div class="tt_e_desc col-xs-12">
                                 </div>
-                                <div class="tt_e_low row">
+                                <div class="tt_e_low row" style="margin: 0px">
                                     <div class="tt_e_stage col-xs-8">Main Stage</div>
                                     <div class="tt_e_date col-xs-4">22:00</div>
                                 </div>
                             </div>
-                        -->
+
 
                         </div>
-
+                <!--
                 <div id="faq" class="faq">
                 </div>
+                -->
             </div>
 
 
@@ -148,7 +136,7 @@
 
 
 
-    <!-- Footer -->
+    <!-- Footer --
     <div id="footer" class="footer container shadow">
             <span class="visible-xs-block">only Mobile</span>
             <span class="visible-sm-block">only Tablet</span>
