--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="widht=device-width, intial-scale=1">
+    <meta name="viewport" content="width=device-width, intial-scale=1">
 
     <!-- Bootstrap init -->
     <script src="js/jquery-1.11.2.min.js"></script>
@@ -60,11 +60,11 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="timetable_menu">
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Right Now!</a></li>
+                            <li id="rightnow" role="presentation"><a role="menuitem" tabindex="-1" href="">Right Now!</a></li>
                             <li role="presentation" class="divider"></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-3" href="#">Friday</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-4" href="#">Saturday</a></li>
+                            <li id="thursday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
+                            <li id="friday" role="presentation"><a role="menuitem" tabindex="-3" href="#">Friday</a></li>
+                            <li id="saturday" role="presentation"><a role="menuitem" tabindex="-4" href="#">Saturday</a></li>
                         </ul>
 
                     </div>
@@ -110,6 +110,7 @@
                 </div>
                         <!-- timeTable element -->
                         <div class="row" style="display: none; margin: 0px"  id="tt_element">
+                            <!--
                             <div class="tt_e_left col-xs-3">
 
                             </div>
@@ -121,7 +122,7 @@
                                     <div class="tt_e_date col-xs-4">22:00</div>
                                 </div>
                             </div>
-
+                        -->
 
                         </div>
                 <!--
