--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 
     <!-- Bootstrap init -->
     <script src="js/jquery-1.11.2.min.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
     <script src="js/main.js"></script>
 
 
-
     <!-- Styles init -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 
@@ -23,146 +24,141 @@
 
 <body>
 
-
-
-<!-- header -->
-
-    <div class="container header ">
-        <div class="row" style="margin: 0px">
-            <div class="col-xs-2 visible-sm-block visible-md-block visible-lg-block">
-                <a id="logo" href="index.html">
-                    <img class="logo" src="img/placeholder_100.png"/>
-                </a>
+    <!-- header -->
+        <!-->
+        <div class="container header ">
+            <div class="row" style="margin: 0px">
+                <div class="col-xs-2 visible-sm-block visible-md-block visible-lg-block">
+                    <a id="logo" href="index.html">
+                        <img class="logo" src="img/placeholder_100.png"/>
+                    </a>
+                </div>
+                <div class="col-xs-2 visible-xs-block">
+                    <a href="index.html">
+                        <img class="logo" src="img/palceholder_35.png"/>
+                    </a>
+                </div>
+                <span class="col-xs-10 visible-xs-block">ELF - 2015</span>
+                <span class="visible-sm-block">Electric Love Festival - 2015</span>
+                <span class="visible-md-block">Electric Love Festival - 2015</span>
+                <span class="visible-lg-block">Electric Love Festival - 2015</span>
             </div>
-            <div class="col-xs-2 visible-xs-block">
-                <a href="index.html">
-                    <img class="logo" src="img/palceholder_35.png"/>
-                </a>
-            </div>
-            <span class="col-xs-10 visible-xs-block">ELF - 2015</span>
-            <span class="visible-sm-block">Electric Love Festival - 2015</span>
-            <span class="visible-md-block">Electric Love Festival - 2015</span>
-            <span class="visible-lg-block">Electric Love Festival - 2015</span>
         </div>
-    </div>
 
 
 
-    <div id="everything" class="container ">
+        <div id="everything" class="container ">
 
-            <!-- Top Navigation with 4 Buttons and 2 Dropdown Menues -->
-            <div class="container topNav shadow ">
-                <!-- GoogleMaps -->
-                <div class="row" style="margin: 0px">
-                    <div class="col-xs-3 btn_nav">
-                        <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">Timetable</span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="timetable_menu">
-                            <li id="rightnow" role="presentation"><a role="menuitem" tabindex="-1" href="">Right Now!</a></li>
-                            <li role="presentation" class="divider"></li>
-                            <li id="thursday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
-                            <li id="friday" role="presentation"><a role="menuitem" tabindex="-3" href="#">Friday</a></li>
-                            <li id="saturday" role="presentation"><a role="menuitem" tabindex="-4" href="#">Saturday</a></li>
-                        </ul>
-
-                    </div>
-
-                    <div class="col-xs-3 btn_nav">
-                        <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
-                            <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
-                            <span class="hidden-xs">Map</span>
-                        </button>
-                    </div>
-
-                    <div class="col-xs-3 btn_nav">
-                        <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
-                            <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
-                            <span class="hidden-xs">News</span>
-                        </button>
-                    </div>
-
-
-                    <div class="col-xs-3 btn_nav">
-                        <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-
-            <!-- Main Area
-
-            den bereich in da main area verändern mit hilfe von java script
-            time table button wird gedrück und der main bereich verändert sic
-            w
-            -->
-
-            <div id="main" class="container-fluid main shadow">
-                <div id="first" class="start row" style="margin: 0px">
-                </div>
-                        <!-- timeTable element -->
-                        <div class="row" style="display: none; margin: 0px"  id="tt_element">
-                            <!--
-                            <div class="tt_e_left col-xs-3">
-
-                            </div>
-                            <div class="tt_e_right col-xs-9">
-                                <div class="tt_e_desc col-xs-12">
-                                </div>
-                                <div class="tt_e_low row" style="margin: 0px">
-                                    <div class="tt_e_stage col-xs-8">Main Stage</div>
-                                    <div class="tt_e_date col-xs-4">22:00</div>
-                                </div>
-                            </div>
-                        -->
-
+                <!-- Top Navigation with 4 Buttons and 2 Dropdown Menues -->
+                <div class="container topNav shadow ">
+                    <!-- GoogleMaps -->
+                    <div class="row" style="margin: 0px">
+                        <div class="col-xs-3 btn_nav">
+                            <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
+                            </ul>
                         </div>
-                <!--
-                <div id="faq" class="faq">
+
+                        <div class="col-xs-3 btn_nav">
+                            <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
+                                <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
+                                <span class="hidden-xs">Map</span>
+                            </button>
+                        </div>
+
+                        <div class="col-xs-3 btn_nav">
+                            <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
+                                <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
+                                <span class="hidden-xs">News</span>
+                            </button>
+                        </div>
+
+
+                        <div class="col-xs-3 btn_nav">
+                            <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
+
+
+                <!-- Main Area
+
+                den bereich in da main area verändern mit hilfe von java script
+                time table button wird gedrück und der main bereich verändert sic
+                w
                 -->
-            </div>
+
+                <div id="main" class="container-fluid main shadow">
+                    <div id="first" class="start row" style="margin: 0px">
+                    </div>
+                            <!-- timeTable element -->
+                            <div class="row" style="display: none; margin: 0px"  id="tt_element">
+                                <!--
+                                <div class="tt_e_left col-xs-3">
+
+                                </div>
+                                <div class="tt_e_right col-xs-9">
+                                    <div class="tt_e_desc col-xs-12">
+                                    </div>
+                                    <div class="tt_e_low row" style="margin: 0px">
+                                        <div class="tt_e_stage col-xs-8">Main Stage</div>
+                                        <div class="tt_e_date col-xs-4">22:00</div>
+                                    </div>
+                                </div>
+                            -->
+
+                            </div>
+                    <!--
+                    <div id="faq" class="faq">
+                    </div>
+                    -->
+                </div>
 
 
-    </div>
+        </div>
 
 
 
 
-    <!-- Footer --
-    <div id="footer" class="footer container shadow">
-            <span class="visible-xs-block">only Mobile</span>
-            <span class="visible-sm-block">only Tablet</span>
-            <span class="visible-md-block">only Desktop</span>
-            <span class="visible-lg-block">only Large Desktop</span>
-    </div>
+        <!-- Footer --
+        <div id="footer" class="footer container shadow">
+                <span class="visible-xs-block">only Mobile</span>
+                <span class="visible-sm-block">only Tablet</span>
+                <span class="visible-md-block">only Desktop</span>
+                <span class="visible-lg-block">only Large Desktop</span>
+        </div>
 
 
-<!--
-<!-- Liste --
-    <div class="container-fluid">
-        <h1>Hello World!</h1>
-        <p>resize</p>
-        <ol>
-            <li>
-                <div class ="col-sm-4" style="background-color: #ffff00">.col-sm-4</div>
-            </li>
-            <li>
-                <div class ="col-sm-4" style="background-color: aqua">.col-sm-8</div>
-            </li>
+    <!--
+    <!-- Liste --
+        <div class="container-fluid">
+            <h1>Hello World!</h1>
+            <p>resize</p>
+            <ol>
+                <li>
+                    <div class ="col-sm-4" style="background-color: #ffff00">.col-sm-4</div>
+                </li>
+                <li>
+                    <div class ="col-sm-4" style="background-color: aqua">.col-sm-8</div>
+                </li>
 
-        </ol>
+            </ol>
 
-    </div>
--->
+        </div>
+    -->
+
 	
 </body>
 
