--- a/index.html
+++ b/index.html
@@ -28,21 +28,17 @@
         <!-->
         <div class="container header ">
             <div class="row" style="margin: 0px">
-                <div class="col-xs-2 visible-sm-block visible-md-block visible-lg-block">
-                    <a id="logo" href="index.html">
-                        <img class="logo" src="img/placeholder_100.png"/>
-                    </a>
+                <div class="visible-sm-block visible-md-block visible-lg-block col-xs-2 container">
+                    <a href="index.html"><img src="img/logo.gif" class="img-responsive" height="60" width="150"/></a>
                 </div>
-                <div class="col-xs-2 visible-xs-block">
-                    <a href="index.html">
-                        <img class="logo" src="img/palceholder_35.png"/>
-                    </a>
+                <div class="visible-xs-block col-xs-2 container">
+                    <a href="index.html"><img src="img/logo_min.gif" class="img-responsive" height="50" width="50"/></a>
                 </div>
-                <span class="col-xs-10 visible-xs-block">ELF - 2015</span>
-                <span class="visible-sm-block">Electric Love Festival - 2015</span>
-                <span class="visible-md-block">Electric Love Festival - 2015</span>
-                <span class="visible-lg-block">Electric Love Festival - 2015</span>
+
+                <div class="col-xs-10 container"></div>
+
             </div>
+
         </div>
 
 
@@ -51,37 +47,48 @@
 
                 <!-- Top Navigation with 4 Buttons and 2 Dropdown Menues -->
                 <div class="container topNav shadow ">
-                    <!-- GoogleMaps -->
+                    <!-- TimeTabel -->
                     <div class="row" style="margin: 0px">
                         <div class="col-xs-3 btn_nav">
                             <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
+                                <img class="btn_img" src="img/timetable.gif" alt="Timetable"/><span class="hidden-xs">Timetable</span>
                                 <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
+                            <ul id="timetable" class="dropdown-menu" role="menu" aria-labelledby="timetable">
+                                <li id="rightnow" role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="showTimeTable(); return false;">Right Now!</a></li>
+                                <li id="thursday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
+                                <li id="friday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Friday</a></li>
+                                <li id="saturday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Saturday</a></li>
                             </ul>
                         </div>
 
+                        <!-- Maps -->
                         <div class="col-xs-3 btn_nav">
-                            <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
-                                <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
+                            <button class="col-xs-12 btn_nav">
+                                <img class="btn_img" src="img/map.gif" alt="Map"/>
                                 <span class="hidden-xs">Map</span>
                             </button>
                         </div>
 
-                        <div class="col-xs-3 btn_nav">
-                            <button class="col-xs-12 btn_nav" onclick="showTimeTable()">
-                                <img class="btn_nav" src="img/placeholder.png" alt="Time Table"/>
-                                <span class="hidden-xs">News</span>
-                            </button>
-                        </div>
-
-
+                        <!-- News -->
                         <div class="col-xs-3 btn_nav">
                             <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img class="btn_nav" src="img/placeholder.png" alt="home"/><span class="hidden-xs">FAQ</span>
+                                <img class="btn_img" src="img/mail.gif" alt="FAQ"/><span class="hidden-xs">FAQ</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="new_menu">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="https://www.facebook.com/electriclovefestival">Facebook</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-2" href="https://www.twitter.com/electricloveaut">Twitter</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-3" href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g">Youtube</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-4" href="https://instagram.com/electricloveaut">Instagram</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-5" href="http://www.electriclove.at/">Home</a></li>
+                            </ul>
+                        </div>
+
+                        <!-- Info -->
+                        <div class="col-xs-3 btn_nav">
+                            <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="btn_img" src="img/help.gif" alt="FAQ"/><span class="hidden-xs">FAQ</span>
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
