--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
             <div class="row" style="margin: 0px">
                 <div class="visible-sm-block visible-md-block visible-lg-block col-xs-2 container">
                     <a href="index.html"><img src="img/logo.gif" class="img-responsive" height="60" width="150"/></a>
+
+
                 </div>
+                <div class="visible-sm-block visible-md-block visible-lg-block col-xs-10 container">Electric Love Festival 2015</div>
                 <div class="visible-xs-block col-xs-2 container">
                     <a href="index.html"><img src="img/logo_min.gif" class="img-responsive" height="50" width="50"/></a>
                 </div>
+                <div class="visible-xs-block col-xs-10 container">ELF 15</div>
 
                 <div class="col-xs-10 container"></div>
 
@@ -55,10 +59,10 @@
                                 <span class="caret"></span>
                             </button>
                             <ul id="timetable" class="dropdown-menu" role="menu" aria-labelledby="timetable">
-                                <li id="rightnow" role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="showTimeTable(); return false;">Right Now!</a></li>
-                                <li id="thursday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
-                                <li id="friday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Friday</a></li>
-                                <li id="saturday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Saturday</a></li>
+                                <li class="menu_item" id="rightnow" role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="showTimeTable(); return false;">Right Now!</a></li>
+                                <li class="menu_item" id="thursday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Thursday</a></li>
+                                <li class="menu_item" id="friday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Friday</a></li>
+                                <li class="menu_item" id="saturday" role="presentation"><a role="menuitem" tabindex="-2" href="#">Saturday</a></li>
                             </ul>
                         </div>
 
@@ -77,11 +81,16 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="new_menu">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="https://www.facebook.com/electriclovefestival">Facebook</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-2" href="https://www.twitter.com/electricloveaut">Twitter</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-3" href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g">Youtube</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-4" href="https://instagram.com/electricloveaut">Instagram</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-5" href="http://www.electriclove.at/">Home</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-1" href="https://www.facebook.com/electriclovefestival">
+                                    <span><img class="menu_icon" src="img/facebook.gif"> </span>Facebook</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-2" href="https://www.twitter.com/electricloveaut">
+                                    <span><img class="menu_icon" src="img/twitter.gif">Twitter</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-3" href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g">
+                                    <span><img class="menu_icon" src="img/youtube.gif">Youtube</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-4" href="https://instagram.com/electricloveaut">
+                                    <span><img class="menu_icon" src="img/instagram.gif">Instagram</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-5" href="http://www.electriclove.at/">
+                                    <span><img class="menu_icon" src="img/house.gif">Home</a></li>
                             </ul>
                         </div>
 
@@ -92,8 +101,8 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="faq_menu">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Drinks</a></li>
+                                <li class="menu_item" role="presentation"><a role="menuitem" tabindex="-2" href="#">Food</a></li>
                             </ul>
                         </div>
                     </div>
