--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
                         <!-- Maps -->
                         <div class="col-xs-3 btn_nav">
-                            <button class="col-xs-12 btn_nav">
-                                <img class="btn_img" onclick="googleLoad()" src="img/map.gif" alt="Map"/>
+                            <button class="col-xs-12 btn_nav" onclick="googleLoad()">
+                                <img class="btn_img" src="img/map.gif" alt="Map"/>
                                 <span class="hidden-xs">Map</span>
                             </button>
                         </div>
@@ -118,7 +118,6 @@
                 -->
 
                 <div id="main" class="container-fluid main">
-                    <div id="contentholder" style="margin: 0px"></div>
                     <div id="first" class="start row" style="margin: 0px">
                     </div>
 
