--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
 <body>
 
-    <!-- header -->
-        <!-->
+    <!-- header --
         <div class="container header ">
             <div class="row" style="margin: 0px">
                 <div class="visible-sm-block visible-md-block visible-lg-block col-xs-2 container">
@@ -46,13 +45,13 @@
 
         </div>
 
-
+        -->
 
         <div id="everything" class="container ">
 
-            <!-- Top Navigation with 4 Buttons-->
+            <!-- Top Navigation with 4 Buttons-
                 <div class="container topNav shadow ">
-                    <!-- TimeTabel -->
+                    <!-- TimeTabel --
                     <div class="row" style="margin: 0px">
                         <div class="col-xs-3 btn_nav">
                             <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -67,7 +66,7 @@
                             </ul>
                         </div>
 
-                        <!-- Maps -->
+                        <!-- Maps --
                         <div class="col-xs-3 btn_nav">
                             <button class="col-xs-12 btn_nav" onclick="googleLoad()">
                                 <img class="btn_img" src="img/map.gif" alt="Map"/>
@@ -75,7 +74,7 @@
                             </button>
                         </div>
 
-                        <!-- News -->
+                        <!-- News --
                         <div class="col-xs-3 btn_nav">
                             <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img class="btn_img" src="img/mail.gif" alt="FAQ"/><span class="hidden-xs">FAQ</span>
@@ -95,7 +94,7 @@
                             </ul>
                         </div>
 
-                        <!-- Info -->
+                        <!-- Info --
                         <div class="col-xs-3 btn_nav">
                             <button class=" col-xs-12 btn_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img class="btn_img" src="img/help.gif" alt="FAQ"/><span class="hidden-xs">FAQ</span>
@@ -118,12 +117,20 @@
                 -->
 
                 <div id="main" class="container-fluid main">
-                    <div id="first" class="start row" style="margin: 0px">
+                    <div class="icon_name" style="margin-top: 10px">
+                        <img src="img/placeholder_name.png">
+                    </div>
+                    <div class="row" style="margin-bottom: 10px">
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
                     </div>
 
-                    <div id="second map_canvas" style="width:100%; height:100%; display: none;"></div>
-                            <!-- timeTable element -->
-                            <div class="row" style="display: none; margin: 0px"  id="tt_element">
                                 <!--
                                 <div class="tt_e_left col-xs-3">
 
