--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 w
                 -->
 
-                <div id="main" class="container-fluid main">
-                    <div class="icon_name" style="margin-top: 10px">
+                <div id="main" class="element">
+                    <div class="col-xs-12" style="margin-bottom: 10px">
                         <img src="img/placeholder_name.png">
                     </div>
                     <div class="row" style="margin-bottom: 10px">
