--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                 w
                 -->
 
-                <div id="main" class="element">
-                    <div class="col-xs-12" style="margin-bottom: 10px">
-                        <img src="img/placeholder_name.png">
+                <div id="main" class="main">
+                    <div class="col-xs-12 icon_name">
+                        <img src="img/logo.gif"/>
                     </div>
                     <div class="row" style="margin-bottom: 10px">
                         <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/logo_min.gif"></a></div>
                         <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
                     </div>
                     <div class="row">
