--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 w
                 -->
 
-                <div id="main" class="main">
+                <div id="main" class="element">
                     <div class="col-xs-12 icon_name">
                         <img src="img/logo.gif"/>
                     </div>
