--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
 
                 <div id="main" class="element">
                     <div class="col-xs-12 icon_name">
-                        <img src="img/logo.gif"/>
+                        <img src="img/logo_name.gif" style="width: 250px; height: 53px"/>
                     </div>
                     <div class="row" style="margin-bottom: 10px">
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/logo_min.gif"></a></div>
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/logo_max.gif"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/placeholder_icon.png"></a></div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
-                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/placeholder_icon.png"></a></div>
+                        <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/placeholder_icon.png"></a></div>
                     </div>
 
                                 <!--
