--- a/sites/timetable.html
+++ b/sites/timetable.html
@@ -24,11 +24,25 @@
 </head>
 
 <body>
-    <div id="everything" class="container">
-        <div class="row">
-            <div class="col-xs-12">TestColumn</div>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Back</a>
         </div>
-
+        <div>
+            <ul class="nav navbar-tabs">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Food</a></li>
+                <li role="presentation"><a href="#">Drinks</a></li>
+                <li role="presentation"><a href="#">Merchandise</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div id="everything" class="container">
+        <div id="timetable" class="element">
+            <div class="row">
+                <div class="col-xs-12">TestColumn</div>
+            </div>
+        </div>
     </div>
 </body>
 
