--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 <body>
     <div id="everything" class="container ">
         <div id="main" class="element">
-            <div class="col-xs-12 icon_name">
+            <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
                 <img src="img/logo_name.gif" style="width: 250px; height: 53px"/>
             </div>
 
-            <div class="row" style="margin-bottom: 10px">
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.png"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/logo_max.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/map.png"></a></div>
+            <div class="row" style="margin-bottom: 20px">
+                <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main" src="img/logo_max.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/news.png"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/info.png"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/food.png"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/news.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/info.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
 
         </div>
