--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="phonegap.js"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false">
-    </script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false"></script>
 
-    <!-- Styles init -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <!-- Styles init -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css"/>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css"/>
+    <link rel="stylesheet" href="css/normalize.css" type="text/css"/>
+    <link rel="stylesheet" href="css/styles.css" type="text/css"/>
+
 
     <title>Electric Love Festival</title>
 
 </head>
 
 <body>
-    <div id="everything" class="container ">
+
+    <div id="everything" class="container">
         <div id="main" class="element">
             <div class="col-xs-12 icon_name" style="margin-bottom: 20px">
                 <img src="img/logo_name.gif" style="width: 250px; height: 53px"/>
@@ -43,6 +44,7 @@
 
         </div>
     </div>
+
 </body>
 
 </html>
