--- a/sites/map.html
+++ b/sites/map.html
@@ -7,9 +7,11 @@
     <!-- Bootstrap init -->
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery.countdown-2.0.4/jquery.countdown.js"></script>
-    <script src="../js/jquery.countdown-2.0.4/jquery.countdown.min.js"></script>
-    <script src="../js/jquery.countdown-2.0.4/time.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false">
+    </script>
+    <script src="../js/map.js"></script>
+
+
 
     <!-- Styles init -->
     <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
@@ -24,15 +26,16 @@
 
 <body>
 <div id="everything" class="container">
+    <!--
     <div id="main" class="element">
+
         <div class="col-xs-12 clocknav">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
-        <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
-            <div class="clockbox" id="clock"></div>
-        </div>
+-->
+        <div id="map-canvas" class="map"> hello </div>
 
-    </div>
+
 </div>
 </body>
 
