maps kinda working

--- a/sites/map.html
+++ b/sites/map.html
@@ -25,15 +25,13 @@
 </head>
 
 <body>
-<div id="everything" class="container">
-    <!--
-    <div id="main" class="element">
+<div class="wrapper">
 
         <div class="col-xs-12 clocknav">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
--->
-        <div id="map-canvas" class="map"> hello </div>
+
+        <div id="map-canvas" class="map"></div>
 
 
 </div>
