--- a/sites/info.html
+++ b/sites/info.html
@@ -25,23 +25,24 @@
 
 <body>
 
-    <div id="everything" class="content-info">
+    <div id="everything" class="content-info" style="padding: 5px">
         <div class="col-xs-12 clocknav">
                 <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
-        <div class="col-xs-12 clocknav">
+        <form action="rules.html">
+               <button class="btn-info col-xs-12 btn_infohtml">Click me</button>
+        </form>
+        <form action="rules.html">
+            <button class="btn-info col-xs-12 btn_infohtml">Click me</button>
+        </form>
 
-        </div>
-        <div class="col-xs-12 clocknav">
+        <form action="rules.html">
+            <button class="btn-info col-xs-12 btn_infohtml">Click me</button>
+        </form>
 
-        </div>
-        <div class="col-xs-12 clocknav">
-
-        </div>
-        <div class="col-xs-12 clocknav">
-
-        </div>
-
+        <form action="rules.html">
+            <button class="btn-info col-xs-12 btn_infohtml">Click me</button>
+        </form>
 
     </div>
 
