--- a/sites/map.html
+++ b/sites/map.html
@@ -31,7 +31,7 @@
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
 
-        <div id="map-canvas" class="map"></div>
+        <div id="map-canvas"></div>
 
 
 </div>
