--- a/sites/map.html
+++ b/sites/map.html
@@ -25,16 +25,18 @@
 </head>
 
 <body>
-<div class="wrapper">
+    <div class="wrapper">
 
         <div class="col-xs-12 clocknav">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
 
-        <div id="map-canvas"></div>
+        <button id="first" class="first btn-info col-xs-12" onclick="googleLoad()">Press after you activate location on your phone.</button>
+        <div id="second map_canvas" style="width:100%; height:100%; display: none;"></div>
 
 
-</div>
+
+    </div>
 </body>
 
 </html>
