--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="row" style="margin-bottom: 20px">
                 <div class="col-xs-4" style="padding: 0px"><a href="sites/timetable.html"><img class="item_main" src="img/max/timetable.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a href="sites/countdown.html"><img class="item_main" src="img/logo_max.gif"></a></div>
-                <div class="col-xs-4" style="padding: 0px"><a href="sites/map.html"><img class="item_main" src="img/max/maps.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a id="map" href="sites/test.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
                 <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/news.gif"></a></div>
