--- a/sites/map.html
+++ b/sites/map.html
@@ -9,7 +9,62 @@
     <script src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCmouXxBlDi9G_UQigvgCxilD8LjKWMfBc&sensor=false">
     </script>
-    <script src="../js/map.js"></script>
+    <script>function googleLoad(){
+
+        var timetable = document.getElementById("first");
+        var temp = document.getElementById("second map_canvas");
+        timetable.style.display = "none";
+        temp.style.display = "block";
+
+        var map;
+
+        var mapOptions = {
+            zoom: 14,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("second map_canvas"),
+                mapOptions);
+
+// Try HTML5 geolocation
+        if(navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                var pos = new google.maps.LatLng(position.coords.latitude,
+                        position.coords.longitude);
+
+                var infowindow = new google.maps.Marker({
+                    map: map,
+                    position: pos,
+
+                });
+
+                map.setCenter(pos);
+            }, function() {
+                handleNoGeolocation(true);
+            });
+        } else {
+            // Browser doesn't support Geolocation
+            handleNoGeolocation(false);
+        }
+    };
+
+    function handleNoGeolocation(errorFlag) {
+        if (errorFlag) {
+            var content = 'Error: The Geolocation service failed.';
+        } else {
+            var content = 'Error: Your browser doesn\'t support geolocation.';
+        }
+
+        var options = {
+            map: map,
+            position: new google.maps.LatLng(60, 105),
+            content: content
+        };
+
+        var infowindow = new google.maps.InfoWindow(options);
+        map.setCenter(options.position);
+    }
+
+    google.maps.event.addDomListener(window, 'load', googleLoad());</script>
 
 
 
@@ -25,15 +80,9 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="everything container">
 
-        <div class="col-xs-12 clocknav">
-            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
-        </div>
-
-        <button id="first" class="first btn-info col-xs-12" onclick="googleLoad()">Press after you activate location on your phone.</button>
         <div id="second map_canvas" style="width:100%; height:100%; display: none;"></div>
-
 
 
     </div>
